[tool.poetry]
name = "fogt-integra-2023"
version = "0.1.0"
description = ""
authors = ["Maciej J. Mrowinski <47922372+brokenpumpernickel@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "fogt_integra_2023"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
sympy = "^1.12"
matplotlib = "^3.8.2"
jupyterlab = "^4.0.10"
scipy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
